[package]
name = "sequence_detector"
description = "CLI that detects sequences of commands based on configuration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
config = "0.13.3"
serde = "1.0.169"
serde_derive = "1.0.169"
serde_json = { version = "1.0.100", features = ["std"] }
